# tiffany_gazebo

./: README.md
src/hexapod_ws/: package.xml
src/hexapod_ws/config/: parameters.yaml
src/hexapod_ws/description/: hexapod.urdf.xacro
src/hexapod_ws/description/meshes/: bateria.stl  suportecamera.stl
src/hexapod_ws/scripts/: teleop_hexapod.py
workspace/gazebosim/src/hexapod_ws/: CMakeLists.txt
workspace/gazebosim/src/hexapod_ws/config/: bridge.yaml
workspace/gazebosim/src/hexapod_ws/description/meshes/: camera.stl  corpo_center.stl  femur_left.stl  lidar.stl  suportelidar.stl  tibia_right.stl
workspace/gazebosim/src/hexapod_ws/launch/: main.launch.py
workspace/gazebosim/src/hexapod_ws/scripts/: contact_dummy.py  hexapod_runner.py
workspace/gazebosim/src/hexapod_ws/worlds/: hexapod.sdf
workspace/pybullet/: main.py  robot.urdf
workspace/pybullet/assets/: corpo_center.part  corpo_center.stl  coxa_left.part  coxa_left.stl  coxa_right.part  coxa_right.stl  femur_left.part  femur_left.stl  femur_right.part  femur_right.stl  tibia_left.part  tibia_left.stl  tibia_right.part
